@@ -1,12 +1,14 @@
 <?xml version="1.0"?>
-<repository version="1.1"
+<repository version="1.2"
             xmlns="http://www.gtk.org/introspection/core/1.0"
             xmlns:c="http://www.gtk.org/introspection/c/1.0">
   <namespace name="JSCore" version="@WEBKITGTK_API_VERSION@" shared-library="webkitgtk-@WEBKITGTK_API_VERSION@">
-    <alias name="GlobalContextRef"
-           target="none"
-           c:type="JSGlobalContextRef"/>
-    <alias name="ObjectRef" target="none" c:type="JSObjectRef"/>
+    <alias name="GlobalContextRef" target="none">
+      <type name="JSGlobalContextRef" c:type="JSGlobalContextRef"/>
+    </alias>
+    <alias name="ObjectRef" target="none">
+      <type name="JSObjectRef" c:type="JSObjectRef"/>
+    </alias>
     <function name="EvaluateScript" c:identifier="JSEvaluateScript">
       <return-value transfer-ownership="none">
         <type name="none" c:type="void"/>
