@@ -1,3 +1,14 @@
+2010-09-11  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Martin Robinson.
+
+        [GTK] Make introspection work with g-o-i 0.9.5
+        https://bugs.webkit.org/show_bug.cgi?id=45590
+
+        Use new type syntax and bump version number of the gir file.
+
+        * JSCore.gir.in:
+
 2010-09-10  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>
 
         Reviewed by Darin Adler.
